# dynamic-tool-agent

./: .env.example  .gitignore  README.md  agent_thinking_process.txt  main.py  pyproject.toml  requirements.txt  run_agent_demo.py
src/: __init__.py
src/agent/: __init__.py  main_agent.py  prompts.py
src/tools/: registry.py
src/tools/abstraction/: __init__.py  base_tool.py
src/tools/implementations/: calendar_tool.py  code_executor_tool.py  currency_tool.py  database_tool.py  document_reader_tool.py  email_tool.py  timer_tool.py  translator_tool.py  weather_tool.py  web_search_tool.py
src/utils/: __init__.py  llm.py  logger.py
tests/: __init__.py  test_agent.py  test_base_tool.py  test_llm.py  test_registry.py
